# C_Face_DNN_AI

./: FaceSuper.sln  README.md
src/: CMakeLists.txt  FaceSuper.cpp  FaceSuper.h  FaceSuper.rc  FaceSuper.vcxproj  MyTest.cpp  MyTest.vcxproj  MyTest_boost.cpp  main_restoration.cpp
src/cmake/: FindFFmpeg.cmake
src/common/: mydefine.h
src/common1/: FaceUtil.cpp  FaceUtil.h  ImgUtil - Copy.h  ImgUtil.cpp  ImgUtil.h  LoadModel.cpp  LoadModel.h  ffmpegUtil - Copy.cpp  ffmpegUtil.cpp  ffmpegUtil.h
src/engine/: ClaFaceDetection.cpp  ClaFaceDetection.h  ClaFaceDetectionMediapipe.cpp  ClaFaceDetectionMediapipe.h  ClaFaceDetectionOpencv.cpp  ClaFaceDetectionOpencv.h  FaceParsing.cpp  FaceParsing.hpp  FaceRestoreUtil.cpp  FaceRestoreUtil.hpp  FaceSuperEng.cpp  FaceSuperEng.hpp  FaceSuperInterface.cpp  FaceSuperInterface.hpp  SCEncoderEx.cpp  SCEncoderEx.hpp  VQAutoEncoder.cpp  VQAutoEncoder.hpp  VQAutoEncoderEx.cpp  VQAutoEncoderEx.hpp  WebserverAPI.cpp  WebserverAPI.hpp  YoloInference.cpp  YoloInference.h
